# probelet

./: .pre-commit-config.yaml  Cargo.toml  Justfile  Tiltfile
charts/operator/: Chart.yaml  crds.yaml  values.yaml
charts/operator/templates/: crds.yaml  deployment.yaml  rbac.yaml
crates/operator/: .gitignore  Cargo.toml  Dockerfile  Justfile
crates/operator/fixtures/: local-workergroup.yaml
crates/operator/src/: crdgen.rs  lib.rs  main.rs  operator.rs  telemetry.rs  worker_group.rs
crates/operator/src/worker_group/: crd.rs  error.rs  reconcile.rs  worker.rs
crates/operator/src/worker_group/reconcile/: worker_group_instance.rs
crates/operator/src/worker_group/snapshots/: operator__worker_group__worker__tests__pod.snap
