[[bin]]
doc = false
name = "operator"
path = "src/main.rs"

[[bin]]
doc = false
name = "crdgen"
path = "src/crdgen.rs"

[dependencies]
axum = "0.8.3"
axum-extra = { version = "0.10.1", features = ["typed-routing"] }
chrono = { version = "0.4.40", features = ["serde"] }
futures = "0.3.31"
k8s-openapi = { version = "0.24.0", features = ["latest"] }
opentelemetry = { version = "0.30.0", features = ["trace"] }
opentelemetry-otlp = { version = "0.30.0", features = ["trace", "grpc-tonic"] }
opentelemetry_sdk = { version = "0.30.0", features = ["rt-tokio"] }
prometheus-client = "0.23.1"
schemars = { version = "0.8.22", features = ["chrono"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.25"
snafu = { version = "0.8.5", features = ["backtrace"] }
test-log = "0.2.18"
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-opentelemetry = "0.31.0"
tracing-subscriber = { version = "0.3.19", features = ["json", "env-filter"] }
validator = "0.20.0"
validator_derive = "0.20.0"

[dependencies.kube]
features = ["runtime", "client", "derive"]
version = "0.99.0"

[dev-dependencies]
insta = { version = "1.43.1", features = ["json"] }
http = "1"
hyper = "1"
mockall = "0.13.1"
tower-test = "0.4.0"
temp-env = "0.3.6"

[lib]
name = "operator"
path = "src/lib.rs"

[package]
default-run = "operator"
edition = "2024"
name = "operator"
version = "0.1.0"
